--- a/index.html
+++ b/index.html
@@ -5,68 +5,60 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>管種・口径 寸法検索</title>
 
-<!-- PWA を使っているなら下3行はそのまま残してOK（無ければ削除しても可） -->
+<!-- PWA を使うなら manifest 等を置けば自動で有効。未設置なら無視されます。 -->
 <link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#000000">
-<link rel="apple-touch-icon" href="icons/icon-192.png">
 
 <style>
   /* ====== Dark Minimal ====== */
   :root{
-    --bg:#0a0a0a;         /* 背景(ほぼ黒) */
-    --ink:#f6f7f9;        /* 文字(白) */
-    --muted:#9aa0a6;      /* 補助文字 */
-    --line:#3a3a3a;       /* 下線/境界 */
-    --accent:#ffffff;     /* ボタン文字 */
-    --accent-bg:#1f1f1f;  /* ボタン背景 */
-    --accent-hover:#2a2a2a;
+    --bg:#000;          /* 背景(黒) */
+    --ink:#eaeaea;      /* 文字(明るい灰) */
+    --muted:#9aa0a6;    /* 補助文字 */
+    --line:#4a4a4a;     /* 下線/境界 */
   }
   html,body{height:100%}
   body{
     margin:0; background:var(--bg); color:var(--ink);
-    font-family: system-ui,-apple-system,Segoe UI,Roboto,
-                 "Noto Sans JP","Hiragino Kaku Gothic ProN","Yu Gothic",Meiryo,sans-serif;
+    font-family:system-ui,-apple-system,Segoe UI,Roboto,"Noto Sans JP","Yu Gothic",Meiryo,sans-serif;
   }
-  .wrap{max-width:820px; margin:0 auto; padding:28px 18px 56px;}
-  .title{font-size:28px; font-weight:800; letter-spacing:.02em; margin:0 0 24px;}
-  .row{display:grid; grid-template-columns:120px 1fr; gap:18px; align-items:end; margin:18px 0;}
-  .label{color:var(--muted); font-size:14px; letter-spacing:.06em}
+  .wrap{max-width:760px;margin:0 auto;padding:28px 18px 56px}
+  .title{font-size:22px;font-weight:800;margin:0 0 10px;letter-spacing:.02em}
+
+  /* 行を詰めてミニマルに */
+  .row{display:grid;grid-template-columns:120px 1fr;gap:14px;align-items:end;margin:12px 0}
+  .label{color:var(--muted);font-size:13px;letter-spacing:.08em}
+
+  /* 一本線だけの入力（select） */
   .ctl{position:relative}
-  /* アンダーライン入力: select も input も同じ見た目 */
   .uinput{
     width:100%; background:transparent; color:var(--ink);
-    font-size:22px; letter-spacing:.02em; padding:6px 0 10px;
-    border:none; outline:none; border-bottom:1.5px solid var(--line);
+    font-size:20px; letter-spacing:.02em; padding:4px 0 8px;
+    border:none; outline:none; border-bottom:1px solid var(--line);
     appearance:none; -webkit-appearance:none; -moz-appearance:none;
   }
-  /* select の矢印（極控えめ） */
-  .ctl::after{
-    content:""; position:absolute; right:0; bottom:12px; width:36px; height:1.5px; background:var(--line);
-  }
-  .hint{color:var(--muted); font-size:12px; margin-top:6px}
+  /* 右の矢印などの飾りは出さない（一本線だけの見た目） */
+  .ctl::after{content:none}
 
-  /* 結果カード（線と余白のみ） */
-  .card{margin-top:26px; padding:16px 2px; border-top:1px solid var(--line); border-bottom:1px solid var(--line);}
-  .kv{display:grid; grid-template-columns:160px 1fr; gap:10px; align-items:center; padding:10px 0;}
-  .k{color:var(--muted); font-size:14px; letter-spacing:.06em}
-  .v{font-size:22px; font-weight:700}
-
-  /* ボタンはフラットに */
-  .actions{display:flex; gap:12px; margin:24px 0 8px}
+  .actions{display:flex;gap:10px;margin:18px 0 6px}
   .btn{
-    flex:1; height:56px; border-radius:14px; border:1px solid var(--line);
-    color:var(--accent); background:var(--accent-bg); font-size:18px; font-weight:800; letter-spacing:.08em;
-    cursor:pointer;
+    flex:1; height:48px; border-radius:12px; border:1px solid var(--line);
+    background:#121212; color:#fff; font-size:16px; font-weight:700; letter-spacing:.06em; cursor:pointer;
   }
-  .btn:hover{ background:var(--accent-hover) }
+  .btn:hover{background:#1b1b1b}
+  .hint{color:var(--muted);font-size:12px;margin-top:4px}
 
-  /* スマホ向け微調整 */
+  /* 結果：線と余白だけ（フラット） */
+  .card{margin-top:18px;padding:8px 0;border-top:1px solid var(--line);border-bottom:1px solid var(--line)}
+  .kv{display:grid;grid-template-columns:140px 1fr;gap:8px;align-items:center;padding:6px 0}
+  .k{color:var(--muted);font-size:13px;letter-spacing:.06em}
+  .v{font-size:20px;font-weight:700}
+
   @media (max-width:560px){
-    .row{grid-template-columns:92px 1fr; gap:14px}
-    .kv{grid-template-columns:120px 1fr}
-    .title{font-size:24px}
-    .uinput{font-size:20px}
-    .v{font-size:20px}
+    .row{grid-template-columns:92px 1fr;gap:12px}
+    .kv{grid-template-columns:110px 1fr}
+    .uinput{font-size:18px}
+    .v{font-size:18px}
   }
 </style>
 </head>
@@ -74,7 +66,7 @@
   <div class="wrap">
     <h1 class="title">管種・口径 寸法検索</h1>
 
-    <!-- 入力部（黒＋アンダーライン） -->
+    <!-- 入力（黒＋極細アンダーライン） -->
     <div class="row">
       <div class="label">管種</div>
       <div class="ctl"><select id="pipeType" class="uinput"></select></div>
@@ -105,6 +97,7 @@
   </div>
 
   <script>
+    // ユーティリティ
     const $ = (s)=>document.querySelector(s);
     const pipeSel = $("#pipeType");
     const nominalSel = $("#nominal");
@@ -113,33 +106,56 @@
 
     let DATA = [];
 
+    // JSONロード（NaN等が入っても弾く安全策付き）
     async function loadData(){
       try{
         statusEl.textContent = "データを読み込み中…";
         const res = await fetch("./pipe_dimensions.json", { cache:"no-cache" });
-        if(!res.ok) throw new Error("pipe_dimensions.json が見つかりません");
-        DATA = await res.json();
+        if(!res.ok) throw new Error("pipe_dimensions.json が見つかりません。同じ階層に置いてください。");
+        const raw = await res.text();
+        // NaN/Infinity が混入していても JSON として読めるように前処理
+        const safe = raw.replace(/\bNaN\b/gi, "null").replace(/\bInfinity\b/gi, "null").replace(/\b-Infinity\b/gi, "null");
+        DATA = JSON.parse(safe);
 
-        // 管種のユニーク候補
+        // 必要フィールドだけ抽出（安全）
+        DATA = DATA.map(r=>({
+          pipe_type: r.pipe_type ?? r["管種"] ?? null,
+          nominal_diameter: (r.nominal_diameter ?? r["呼び径"] ?? null),
+          outer_diameter: r.outer_diameter ?? r["外径"] ?? null,
+          thickness_type1: r.thickness_type1 ?? r["管厚1種"] ?? null,
+          thickness_type3: r.thickness_type3 ?? r["管厚3種"] ?? null,
+          lining_type: r.lining_type ?? r["ライニング種"] ?? null,
+          lining_thickness: r.lining_thickness ?? r["ライニング厚"] ?? null,
+          detector: r.detector ?? r["検出器"] ?? null,
+          index_value: r.index_value ?? r["インデックス"] ?? null
+        })).filter(r=>r.pipe_type!=null && r.nominal_diameter!=null);
+
+        // 管種候補
         const types = [...new Set(DATA.map(r=>r.pipe_type).filter(Boolean))].sort();
         pipeSel.innerHTML = `<option value="">選択してください</option>` + types.map(t=>`<option value="${t}">${t}</option>`).join("");
         nominalSel.innerHTML = `<option value="">先に管種を選ぶ</option>`;
         statusEl.textContent = "管種を選んでください。";
       }catch(e){
-        statusEl.textContent = e.message;
+        statusEl.textContent = "読み込みエラー：" + e.message;
       }
     }
 
+    // 管種選択 → 呼び径候補を生成（数値順）
     pipeSel.addEventListener("change", ()=>{
       const t = pipeSel.value;
       if(!t){ nominalSel.innerHTML = `<option value="">先に管種を選ぶ</option>`; statusEl.textContent="管種を選んでください。"; return; }
-      const ns = [...new Set(DATA.filter(r=>r.pipe_type===t).map(r=>r.nominal_diameter))]
-                  .filter(v=>v!==null && v!==undefined)
-                  .sort((a,b)=>Number(a)-Number(b));
+      const ns = [...new Set(
+        DATA.filter(r=>r.pipe_type===t).map(r=>r.nominal_diameter)
+      )].filter(v=>v!==null && v!==undefined)
+       .map(v=>Number(v))
+       .filter(v=>!Number.isNaN(v))
+       .sort((a,b)=>a-b);
+
       nominalSel.innerHTML = `<option value="">選択してください</option>` + ns.map(n=>`<option value="${n}">${n}</option>`).join("");
       statusEl.textContent = "呼び径を選んでください。";
     });
 
+    // 検索
     $("#search").addEventListener("click", ()=>{
       const t = pipeSel.value;
       const n = nominalSel.value ? Number(nominalSel.value) : null;
@@ -148,20 +164,21 @@
       const rec = DATA.find(r=>r.pipe_type===t && Number(r.nominal_diameter)===n);
       if(!rec){ statusEl.textContent = "一致するデータが見つかりません。"; outCard.style.display="none"; return; }
 
-      $("#o_type").textContent = rec.pipe_type ?? "-";
+      $("#o_type").textContent  = rec.pipe_type ?? "-";
       $("#o_nominal").textContent = rec.nominal_diameter ?? "-";
       $("#o_outer").textContent = rec.outer_diameter ?? "-";
-      $("#o_t1").textContent = rec.thickness_type1 ?? "-";
-      $("#o_t3").textContent = rec.thickness_type3 ?? "-";
+      $("#o_t1").textContent    = rec.thickness_type1 ?? "-";
+      $("#o_t3").textContent    = rec.thickness_type3 ?? "-";
       $("#o_ltype").textContent = rec.lining_type ?? "-";
-      $("#o_lth").textContent = rec.lining_thickness ?? "-";
-      $("#o_det").textContent = rec.detector ?? "-";
-      $("#o_idx").textContent = rec.index_value ?? "-";
+      $("#o_lth").textContent   = rec.lining_thickness ?? "-";
+      $("#o_det").textContent   = rec.detector ?? "-";
+      $("#o_idx").textContent   = rec.index_value ?? "-";
 
       outCard.style.display = "";
       statusEl.textContent = "検索完了。";
     });
 
+    // クリア
     $("#clear").addEventListener("click", ()=>{
       pipeSel.selectedIndex = 0;
       nominalSel.innerHTML = `<option value="">先に管種を選ぶ</option>`;
@@ -169,9 +186,10 @@
       statusEl.textContent = "管種を選んでください。";
     });
 
+    // 初期化
     loadData();
 
-    // PWA登録（ファイルがあればそのまま有効）
+    // （任意）PWA登録：service-worker.js があれば使われる
     if('serviceWorker' in navigator){
       navigator.serviceWorker.register('./service-worker.js').catch(()=>{});
     }
